--- a/public/styles.css
+++ b/public/styles.css
@@ -177,3 +177,16 @@ h1.h1 {
   margin-top: -9px;
   margin-bottom: -15px;
 }
+
+.map {
+  height: 100%;
+  width: 100%;
+  display: inline-blok;
+}
+.map-parent {
+  width: 100%;
+  height: 527px;
+  background-color: #f3e19f;
+  border: 7px #333 solid;
+  padding: 0 15%;
+}
